[package]
name = "bva"
version = "0.4.1"
authors = ["Charles Hubain <github@haxelion.eu>"]
edition = "2021"
rust-version = "1.61"
description = "bva is a rust crate for manipulating and doing arithmetics on bit vectors of fixed but arbitrary size."
documentation = "https://docs.rs/bva"
readme = "README.md"
homepage = "https://github.com/haxelion/bva/"
repository = "https://github.com/haxelion/bva/"
license = "MIT"
keywords = ["bit", "vector", "binary", "arithmetics"]
categories = ["data-structures", "encoding", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]

num-bigint = "0.4.4"
rand = "0.8.5"
